tests/ui/feature-gates/feature-gate-rustdoc-texmath.rs
#![doc(syntax="+tex_math_dollars")]
//~^ ERROR unstable

//! $\sqrt{2}$

fn main() {}
